[package]
name = "grizzly"
version = "0.1.2-rc-4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.4.0", features = ["derive", "cargo"] }
zip = "0.6.6"
nanoid = "0.4.0"
anyhow = "1.0.75"
reqwest = { version = "0.11", default_features = false, features = ["native-tls-vendored"] }
tokio = { version = "1.0.0", features = ["full"] }
home = "0.5.5"
rand = "0.8.5"
walkdir = "2.3.3"
log = "0.4.20"
simple_logger = "4.2.0"
human_bytes = "0.4.2"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
